--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,3 +19,5 @@ LazyData: true
 Depdends: R (>=3.3.0)
 Imports: randomForest (>= 4.6-12)
 RoxygenNote: 6.0.1
+URL: https://github.com/aritronath/LEXI
+BugReports: https://github.com/aritronath/LEXI/issues
